--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     
-    <script src="/JS/player.js"></script>
-    <script src="/JS/susuwatari.js"></script>
-    <script src="/JS/background.js"></script>
-    <script src="/JS/game.js"></script>
-    <script src="/JS/main.js"></script>
+    <script src="/JS/player.js" type="text/javascript"></script>
+    <script src="/JS/susuwatari.js" type="text/javascript"></script>
+    <script src="/JS/background.js" type="text/javascript"></script>
+    <script src="/JS/game.js" type="text/javascript"></script>
+    <script src="/JS/main.js" type="text/javascript"></script>
   </body>
 </html>
