--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="/style.css">
+
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.js" integrity="sha512-U2sgwrFhl+Tgx9iGH9h5Ba2WyIjyCes+D0prtIFw3a0V+/fkaeL5Cd/VjyPHno9kUPE1rnNhBGTyvtZsfJp0xg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
   <body>
     
@@ -14,5 +18,7 @@
     <script src="/JS/background.js" type="text/javascript"></script>
     <script src="/JS/game.js" type="text/javascript"></script>
     <script src="/JS/main.js" type="text/javascript"></script>
+    Sounds from Zapsplat.com <br>
+    Pictures from Pexels.com
   </body>
 </html>
