--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="/JS/background.js" type="text/javascript"></script>
     <script src="/JS/game.js" type="text/javascript"></script>
     <script src="/JS/main.js" type="text/javascript"></script>
-    Sounds from Zapsplat.com <br>
-    Pictures from Pexels.com
+    <p>Sounds from Zapsplat.com</p> 
+    <p>Pictures from Pexels.com</p> 
   </body>
 </html>
