--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     
-    <script src="/JS/player.js" type="text/javascript"></script>
-    <script src="/JS/susuwatari.js" type="text/javascript"></script>
-    <script src="/JS/background.js" type="text/javascript"></script>
-    <script src="/JS/game.js" type="text/javascript"></script>
-    <script src="/JS/main.js" type="text/javascript"></script>
-    <p>Sounds from Zapsplat.com</p> 
-    <p>Pictures from Pexels.com</p> 
+    <script src="JS/player.js" type="text/javascript"></script>
+    <script src="JS/susuwatari.js" type="text/javascript"></script>
+    <script src="JS/background.js" type="text/javascript"></script>
+    <script src="JS/game.js" type="text/javascript"></script>
+    <script src="JS/main.js" type="text/javascript"></script>
+    <p>Sound from Zapsplat.com</p> 
+    <p>Pictures from Pexels.com </p> 
   </body>
 </html>
